terraform/modules/security_groups/main.tf
# Create security group for bastion host
resource "aws_security_group" "sg_bastion" {
  vpc_id = var.vpc_id
  ingress {
    from_port   = 22  //ssh connection
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = merge(var.tags, { Name = "${var.project_name}-bastion-sg" })
}


# Create security group for k8s
resource "aws_security_group" "sg_nodes" {
  vpc_id = var.vpc_id
  ## Allow access to Kubernetes API from external sources
  ingress {
    from_port   = 6443
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ## Allow kubelet API traffic for communication between master and worker nodes within the VPC
  ingress {
    from_port   = 10250
    to_port     = 10250
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr]
  }

  ## Allow NodePort range for services to be accessed externally
  ingress {
    from_port   = 30000
    to_port     = 32767
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ## Allow VXLAN (Flannel network overlay) for internal Kubernetes networking
  ingress {
    from_port   = 8472
    to_port     = 8472
    protocol    = "udp"
    cidr_blocks = [var.vpc_cidr]
  }

  ## Allow ssh from external resources
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = merge(var.tags, { Name = "${var.project_name}-nodes-sg" })
}
